apps/configs/base/postgresql-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: postgresql
  labels:
    app: postgresql
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30001
  selector:
    app: postgresql
