apps/configs/base/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq
spec:
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
